# pitch_anything

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
service/: .envrc  Dockerfile.base  Makefile  cache.py  common.py  config.py  db.sqlite3.bak  env.example  environment.yml  flowerconfig.py  go.mod  llm.py  main.py  orm.py  page_drafts.pickle  pyproject.toml  rag.py  requirements.txt  schema.py  supervisord.conf  tasks.py  transcribe.py  tts.py
service/media/1/: index_1080p_0000.ts  index_1080p_0003.ts  index_1080p_0005.ts  index_1080p_0007.ts  index_1440p.m3u8  index_1440p_0002.ts  index_1440p_0007.ts  index_1440p_0008.ts  index_144p.m3u8  index_144p_0002.ts  index_144p_0006.ts  index_144p_0008.ts  index_144p_0009.ts  index_2160p_0000.ts  index_2160p_0002.ts  index_2160p_0003.ts  index_2160p_0005.ts  index_2160p_0008.ts  index_2250p_0000.ts  index_2250p_0002.ts  index_2250p_0003.ts  index_2250p_0004.ts  index_2250p_0007.ts  index_2250p_0008.ts  index_240p_0000.ts  index_240p_0003.ts  index_240p_0005.ts  index_240p_0006.ts  index_360p.m3u8  index_360p_0000.ts  index_360p_0001.ts  index_360p_0003.ts  index_360p_0004.ts  index_360p_0005.ts  index_360p_0007.ts  index_480p_0000.ts  index_480p_0001.ts  index_480p_0003.ts  index_480p_0006.ts  index_480p_0008.ts  (+6 more)
service/media/15/: index.m3u8  index_1080p.m3u8  index_1080p_0000.ts  index_1080p_0001.ts  index_1080p_0002.ts  index_1080p_0003.ts  index_1080p_0004.ts  index_1440p.m3u8  index_1440p_0000.ts  index_1440p_0001.ts  index_1440p_0002.ts  index_1440p_0003.ts  index_1440p_0004.ts  index_144p.m3u8  index_144p_0000.ts  index_144p_0001.ts  index_144p_0002.ts  index_144p_0003.ts  index_144p_0004.ts  index_144p_0005.ts  index_2160p.m3u8  index_2160p_0000.ts  index_2160p_0001.ts  index_2160p_0002.ts  index_2160p_0003.ts  index_2160p_0004.ts  index_2250p.m3u8  index_2250p_0000.ts  index_2250p_0001.ts  index_2250p_0002.ts  index_2250p_0003.ts  index_2250p_0004.ts  index_240p.m3u8  index_240p_0000.ts  index_240p_0001.ts  index_240p_0002.ts  index_240p_0003.ts  index_240p_0004.ts  index_240p_0005.ts  index_360p.m3u8  (+19 more)
service/media/19/: index.m3u8  index_1080p.m3u8  index_1080p_0000.ts  index_1440p.m3u8  index_1440p_0000.ts  index_144p.m3u8  index_144p_0000.ts  index_2160p.m3u8  index_2160p_0000.ts  index_240p.m3u8  index_240p_0000.ts  index_3300p.m3u8  index_3300p_0000.ts  index_360p.m3u8  index_360p_0000.ts  index_480p.m3u8  index_480p_0000.ts  index_720p.m3u8  index_720p_0000.ts
service/media/24/: index.m3u8  index_1080p.m3u8  (+17 more)
service/prompts/: gen_speech.txt  prompts.py  synth_audio.txt
service/vec_db/: chroma.sqlite3
(+73 files in other folders)
