[tool.poetry]
name = "david"
version = "0.1.0"
description = ""
authors = ["IZhao <chzhao8904@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
SQLAlchemy = "^2.0.25"
pdf2image = "^1.17.0"
python-pptx = "^0.6.23"
google-cloud-aiplatform = ">=1.38"
azure-cognitiveservices-speech = "^1.34.1"
celery = {extras = ["redis"], version = "^5.3.6"}
uvicorn = "^0.27.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.3"
openai = "^1.9.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
