[tool.poetry]
name = "david"
version = "0.1.0"
description = ""
authors = ["IZhao <chzhao8904@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python=">=3.10,<=3.11"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
SQLAlchemy = "^2.0.25"
pdf2image = "^1.17.0"
python-pptx = "^0.6.23"
google-cloud-aiplatform = ">=1.38"
azure-cognitiveservices-speech = "^1.34.1"
celery = {extras = ["mongodb"], version = "^5.3.6"}
uvicorn = "^0.27.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.3"
openai = "^1.9.0"
python-multipart = "^0.0.6"
insanely-fast-whisper = "^0.0.13"
opencv-python = "^4.9.0.80"
moviepy = "^1.0.3"
python-ffmpeg-video-streaming = "^0.1.15"
chroma = "^0.2.0"
unstructured = "^0.12.2"
langchain-community = "^0.0.16"
pypdf = "^4.0.0"
langchain = "^0.1.4"
chromadb = "^0.4.22"
python-redis = "^0.4.0"
hiredis = "^2.3.2"
redis = {extras = ["hiredis"], version = "^5.0.1"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
